--- a/plugins/org.eclipse.emf.cdo.releng/build.xml
+++ b/plugins/org.eclipse.emf.cdo.releng/build.xml
@@ -559,7 +559,7 @@
             <arg value="-r" />
             <arg value="http://download.eclipse.org/tools/buckminster/headless-4.5" />
             <arg value="-r" />
-            <arg value="http://download.eclipse.org/releases/mars" />
+            <arg value="http://ftp-stud.hs-esslingen.de/pub/Mirrors/eclipse/releases/mars" />
             <arg value="-r" />
             <arg value="http://download.eclipse.org/oomph/updates/latest" />
             <arg value="-r" />
