--- a/plugins/org.eclipse.emf.cdo.releng/build.properties
+++ b/plugins/org.eclipse.emf.cdo.releng/build.properties
@@ -17,8 +17,8 @@ eclipse = 4.7
 emf = 2.13
 weekly = I
 
-qualifier.replacement.* = generator:lastModified
-generator.lastModified.format = 'v'yyyyMMdd-HHmm
+qualifier.replacement.*=generator:buildTimestamp
+generator.buildTimestamp.format='v'yyyyMMdd'-'HHmm
 
 target.os = *
 target.ws = *
